Verification of e-mail addresses.