@@ -1,9 +1,18 @@
 package org.moera.node.mail;
 
-import java.util.Collections;
 import java.util.Map;
 
+import org.moera.lib.naming.NodeName;
+
 public class EmailConfirmMail extends Mail {
+
+    private final String nodeName;
+    private final String token;
+
+    public EmailConfirmMail(String nodeName, String token) {
+        this.nodeName = nodeName;
+        this.token = token;
+    }
 
     @Override
     String getTemplateName() {
@@ -12,7 +21,12 @@ public class EmailConfirmMail extends Mail {
 
     @Override
     Map<String, Object> getModel() {
-        return Collections.singletonMap("domainName", getDomainName());
+        return Map.of(
+            "nodeName", NodeName.shorten(nodeName),
+            "domainName", getDomainName(),
+            "email", getEmail(),
+            "token", token
+        );
     }
 
 }
